// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<Button
  align="center"
  disabled={false}
  forwardRef={null}
  priority="primary"
  size="large"
>
  Button
</Button>
`;

exports[`Button renders disabled normal link 1`] = `
<Button
  align="center"
  disabled={false}
  forwardRef={null}
  href="/some/relative/url"
>
  Normal Link
</Button>
`;

exports[`Button renders normal link 1`] = `
<Button
  align="center"
  disabled={false}
  forwardRef={null}
  href="/some/relative/url"
>
  Normal Link
</Button>
`;

exports[`Button renders react-router link 1`] = `
<Button
  align="center"
  disabled={false}
  forwardRef={null}
  to="/some/route"
>
  Router Link
</Button>
`;
